# alterator-for-doc

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  alt-control.desktop  alterator-manager-servises.wiki  alterator-module-executor.spec  alterator-services.wiki  alterator_manager_backend_monitor.c  alterator_manager_dbus.h  alteratorctl.usage  alteratorctlcomponentsmodule.c  alteratorctldiagmodule.c  alteratorctleditionsmodule.c  alteratorctlgdbussource.h  alteratorctlsysteminfomodule.c  alteratorctlsysteminfomodule.h  apt1.md  backend3.c  batch_status.py  comments.html  control.backend  conventions.md  diag-domain-client.man  diag-domain-controller  diagnostic_tool2_user.diag  diagnostic_tool_user.diag  examples.txt  generate_interface_docs.sh  init_mono.sh  interface-service.wiki  org.altlinux.alterator.legacy.policy  pull_subprojects.sh  pull_updates.sh  pyproject.toml  remote-polkit-agent.spec  remote.c  repo.txt  (+5 more)
alt-components/: CMakeLists.txt  alt-components.spec
alt-components/setup/: welcome-screen.ru.html
alt-components/src/: CMakeLists.txt  application.cpp  application.h
alt-components/src/controller/: controller.cpp  controller.h
alt-components/src/dbus/: dbusproxy.cpp
alt-components/src/model/: item.h  model.cpp  modelbuilder.cpp  proxymodel.cpp
alt-components/src/service/: transaction.cpp
alterator/: CMakeLists.txt  amp-apt.backend  license.object  org.altlinux.alterator.license1.xml  org.altlinux.alterator.release_notes1.xml  release-notes.object  systeminfo-app.backend
alterator-entry/: COPYING  pyproject.toml
alterator-entry/doc/: alterator-diag.txt  desktop-entry.txt  indexhtml
alterator-entry/examples/application/: alterator-object-run.application
alterator-entry/examples/backend/: autogenerated-legacy-net-eth.backend  backend-example.user.backend
alterator-entry/examples/component/: example4.component
alterator-entry/examples/diag/: diagnostic_tool.diag
alterator-entry/examples/service/: example1.service  example2.service
alterator-entry/schemas/: backend.schema.json
alteratorctl/: CHANGELOG.md  CMakeLists.txt  alteratorctlapp.c  alteratorctlcomponentsmodule.h  alteratorctlmanagermodule.h  alteratorctlmoduleinfoparser.h  alteratorctlpackagesmodule.h  main.c
alteratorctl/po/: CMakeLists.txt
components/alt-components-base/editions/: configure.ac
components/alt-control/: CMakeLists.txt
components/alt-control/src/: DBusDataSource.cpp  DBusDataSource.h  MainWindow.cpp
components/alterator-backend-legacy/: .gitignore  CMakeLists.txt  alterator-backend-legacy.spec  alterator-generate-legacy-backends
components/alterator-backend-legacy/src/: main.cpp
components/alterator-module-executor/: CMakeLists.txt  executor.h
repos/adt/: CMakeLists.txt
repos/adt/setup/: ru.basealt.adt.desktop
repos/adt/src/: CMakeLists.txt
repos/alterator-manager/: CMakeLists.txt  alterator_manager_data.h  alterator_manager_interface.h  org.altlinux.alterator-manager.service-user
repos/alterator-module-remote/: CMakeLists.txt  alterator-module-remote.spec  remote.h
subprojects/alt-components/setup/: CMakeLists.txt  alt-components.desktop  org.altlinux.alterator.components1.xml
subprojects/alt-components/src/: CMakeLists.txt  application.cpp  application.h  constants.h  en.ts  main.cpp  ru.ts
subprojects/alt-control/: CHANGELOG.md  CMakeLists.txt
subprojects/alt-control/.gear/: alt-control.spec  alterator-application-control.spec  rules
subprojects/alt-control/alterator/: alterator-application-control.application  alterator-application-control.backend
subprojects/alt-control/cmake/: Version.cmake
subprojects/alt-control/src/: ControlForm.cpp  ControlForm.ui  Controller.cpp  Controller.h  main.cpp  version.h.in
subprojects/alt-control/ts/: en_US.ts  ru_RU.ts
subprojects/alt-packages/: .clang-format  .gitignore  CMakeLists.txt  alt-packages.spec
subprojects/alt-packages/alterator/: CMakeLists.txt  amp-apt.application  amp-apt.backend  amp-repo.application  amp-repo.backend  amp-rpm.application  amp-rpm.backend
subprojects/alt-packages/cmake/: TranslationUtils.cmake
subprojects/alt-packages/desktop/: alt-packages.desktop  org.altlinux.alt-packages.desktop
subprojects/alt-packages/src/: CMakeLists.txt  constants.h  main.cpp  resources.qrc  ru.ts
subprojects/alt-services/: CHANGELOG.md  CMakeLists.txt  README.md  org.altlinux.alt-services.desktop
subprojects/alt-services/.gear/: alt-services.spec  rules
subprojects/alt-services/alterator/: alt-services.application  alt-services.backend
subprojects/alt-services/cmake/: TranslationUtils.cmake  Version.cmake
subprojects/alt-services/data/: icons.qrc  org.altlinux.alt-services.desktop
subprojects/alt-services/doc/: service.playfile.schema.json
subprojects/alt-services/src/: main.cpp
subprojects/alt-services/ts/: en_US.ts  ru_RU.ts
subprojects/alt-systeminfo/: .gitignore  CHANGELOG.md  CMakeLists.txt
subprojects/alt-systeminfo/.gear/: alt-systeminfo.spec  rules
subprojects/alt-systeminfo/alterator/: CMakeLists.txt  license-app.backend  license.application  license.backend  org.altlinux.alterator.license1.policy  org.altlinux.alterator.release_notes1.policy  release-notes-app.backend  release-notes.application  release-notes.backend  systeminfo-app.backend  systeminfo.application
subprojects/alt-systeminfo/desktop/: alt-systeminfo.desktop
subprojects/alt-systeminfo/src/: CMakeLists.txt  en.ts  logo.qrc  main.cpp
subprojects/alterator-backend-legacy/src/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  en.ts
subprojects/alterator-manager/: CMakeLists.txt  README.md  alterator-manager.spec
subprojects/alterator-manager/docs/: README-ru.md
subprojects/alterator-manager/src/: alterator_manager_backend_monitor.h  alterator_manager_backends.c  alterator_manager_backends.h  alterator_manager_dbus.c  alterator_manager_dbus.h  (+2 more)
subprojects/alterator-module-backend3/: CMakeLists.txt  alterator-module-backend3.spec  backend3.c  backend3.h
subprojects/remote-polkit-agent/: CMakeLists.txt  main.c  polkitagentremotelistener.h
(+2887 files in other folders)
