set(ALTERATOR_DATADIR "share/alterator")

set(OBJECTS_DIR "${ALTERATOR_DATADIR}/objects")
set(BACKENDS_DIR "${ALTERATOR_DATADIR}/backends")
set(APPLICATIONS_DIR "${ALTERATOR_DATADIR}/applications")

file(GLOB BACKENDS "${PROJECT_SOURCE_DIR}/alterator/*.backend")
file(GLOB APPLICATIONS "${PROJECT_SOURCE_DIR}/alterator/*.application")
file(GLOB OBJECTS "${PROJECT_SOURCE_DIR}/alterator/*.object")

install(FILES ${OBJECTS} DESTINATION ${OBJECTS_DIR})
install(FILES ${BACKENDS} DESTINATION ${BACKENDS_DIR})
install(FILES ${APPLICATIONS} DESTINATION ${APPLICATIONS_DIR})
