AC_INIT( [alt-editions-server], [0.1], [http://bugzilla.altlinux.org] )

YEAR=`date +%Y`

AC_SUBST(YEAR)

AC_CONFIG_FILES([
	 edition_domain/release-notes.ru.html
	 edition_domain/release-notes.all.html
	 edition_server/release-notes.ru.html
	 edition_server/release-notes.all.html
	 edition_domain/final-notes.ru.html
	 edition_domain/final-notes.all.html
	 edition_server/final-notes.ru.html
	 edition_server/final-notes.all.html
])
AC_OUTPUT
